fix: align navlink in the center

--- a/src/components/Header/Navigation/Navigation.module.css
+++ b/src/components/Header/Navigation/Navigation.module.css
@@ -50,6 +50,7 @@ nav {
   nav {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -69,7 +70,8 @@ nav {
     flex: 1;
     flex-direction: column;
     padding-top: 4rem;
-    padding-left: 6rem;
+    /* padding-left: 6rem; */
+    text-align: center;
   }
 
   .navigation_list li {
